k8s/local/aztec-sandbox-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aztec-sandbox-node
  namespace: chicmoz
spec:
  selector:
    app: aztec-sandbox-node
  ports:
    - name: pxe
      protocol: TCP
      port: 8081
      targetPort: pxe-port
